# Search-Engine-Project

./: AVLOrganizer.h  AVLTreeOrganizer.h  AVLTreeWords.h  AVL_Tree_Test  AVL_Tree_Test.cpp  CMakeLists.txt  README.md  main  test
assets/stopwords/: stopwords.csv
docs/: Answers.md  Coding Assignment 4_ Search Engine (Map).txt
include/: AVLOrganizer.h  AVLTree.h  AVLTreeOrganizer.h  AVLTreePerson.h  AVLTreeWords.h  DocumentParser.h  EngineUI.h  SearchEngine.h  SearchResult.h
src/: DocumentParser.cpp  SearchEngine.cpp  main.cpp
tests/: AVL_Tree_Test.cpp  Document_Parser_Test.cpp  Parser_Test.cpp
